Changelog for plone.app.kss

    (name of developer listed in brackets)

plone.app.kss - 1.5dev Unreleased

    - Removed interface BBB code for old Plone versions.
      [hannosch]

    - Specified package dependencies.
      [hannosch]

plone.app.kss - 1.4.4 Released 2009-03-01

    - Correct invalid use of jq.unbind
      [davisagli]

plone.app.kss - 1.4.3 Released 2008-08-18

    - Made the tests independent of any default content in the site.
      [hannosch]

    - Make the macroContent helper work on Zope 2.12 by
      using a BoundPageTemplate instead of an acquisition-
      wrapped ViewPageTemplateFile.
      [davisagli]

    - Translate message and message type passed to
      PloneCommands.issuePortalMessage. This fixes #7282.
      [maurits]

    - Make the plugin tolerant if jQuery is not present,
      and not have a "jq" reference error in this case.
      Previously any kss pages (for example, demos) that 
      did not use jQuery, failed with a javascript error
      in the presense of this plugin.
      During this, most things seemed to be working, 
      apart from any plugins that were missing because 
      they were to be loaded after the error.
      [ree]

    - Made the kss.demo dependency optional.
      [hannosch]

plone.app.kss - 1.4 Released 2008-04-21

    - add selenium tests that at the moment are only
      runnable with a special branch of kss.demo,
      available from ploneout.
      [ree]

    - use refreshViewlet instead of macroContent in subscribers
      (closes #7879)
      [gotcha)

plone.app.kss - 1.2 Released 2007-08-17

    - Fix bugs and test layer
      [ree, gotcha, jvloothuis, nouri]

plone.app.kss - 1.2-rc2 Released 2007-07-27

    - External links is not always loaded anymore
      [gotcha]

plone.app.kss - 1.2-rc1.1 Released 2007-07-12

    - Prepare for release
      [ree]

plone.app.kss - 1.2-rc1 Released 2007-07-08

    - Cleaned up Acquisition usage. self.context always needs to be unwrapped