@@ -10,6 +10,13 @@ plone.app.kss - 1.5dev Unreleased
     - Specified package dependencies.
       [hannosch]
 
+plone.app.kss - 1.4.5 Released 2009-05-11
+
+    - Made kss attribute tests pass on both Plone 3.2 and 3.3.
+      Difference: on 3.3 contentview-history was removed and inline
+      editing has been disabled by default.
+      [maurits]
+
 plone.app.kss - 1.4.4 Released 2009-03-01
 
     - Correct invalid use of jq.unbind
